# zero-edge

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: ci.yml  dotnet.yml  node.yml  oidc-debug.yml  pages.yml  python.yml  release-crates.yml  release-node.yml  release-nuget.yml  release-python.yml
bindings/dotnet/: Directory.Build.props  Pamoja.Core.sln
bindings/dotnet/src/Pamoja.Core/: MqttClient.cs  MqttClientHandle.cs  MqttClientOptions.cs  MqttMessage.cs  Pamoja.Core.csproj  PamojaCore.cs  PamojaException.cs  Qos.cs  README.md
bindings/dotnet/tests/Pamoja.Core.Smoke/: Pamoja.Core.Smoke.csproj  (+1 more)
bindings/node/: Cargo.toml  package.json
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/npm/win32-x64-msvc/: package.json
bindings/node/src/: lib.rs
bindings/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
bindings/python/python/pamoja/: __init__.py  mqtt.py  raw.py
bindings/python/python/pamoja/_core/: __init__.pyi
bindings/python/src/: lib.rs  mqtt.rs  stub_gen.rs
bindings/python/tests/: test_smoke.py
crates/pamoja-actuators/: README.md
crates/pamoja-audit/: Cargo.toml  README.md
crates/pamoja-audit/src/: entry.rs  lib.rs  log.rs
crates/pamoja-bus/: Cargo.toml  README.md
crates/pamoja-bus/src/: lib.rs
crates/pamoja-can/: README.md
crates/pamoja-can/src/: frame.rs  j1939.rs
crates/pamoja-coap/: Cargo.toml  README.md
crates/pamoja-coap/src/: lib.rs
crates/pamoja-coap/tests/: roundtrip.rs
crates/pamoja-codec/: Cargo.toml  README.md
crates/pamoja-codec/src/: bytes.rs  cbor.rs  delta.rs  json.rs  lib.rs
crates/pamoja-codec/tests/: roundtrip.rs
crates/pamoja-core/: README.md
crates/pamoja-core/src/: error.rs  lib.rs  store.rs
crates/pamoja-dashboard/: Cargo.toml  README.md
crates/pamoja-dashboard/examples/: gateway.rs
crates/pamoja-dashboard/src/: assets.rs  catalog.rs  lib.rs  lite.rs  mock.rs  serve.rs  source.rs  state.rs
crates/pamoja-dashboard/web/: global.css  index.html  lite.html  zquery.min.js
crates/pamoja-dashboard/web/app/: app.js  detail.js  edits.js  feed.js  i18n.js  nav.js  routes.js  store.js  viz.js
crates/pamoja-dashboard/web/app/components/: alarm-bar.js  dashboard-page.js  group-modal.js  manage-modal.js  mesh-modal.js  network-view.js  pairing-modal.js  sensor-modal.js  top-bar.js
crates/pamoja-dashboard/web/app/i18n/: ar.js  ar.json  en.js  en.json  fr.js  fr.json  hi.js  hi.json  pt.js  pt.json  sw.js  sw.json
crates/pamoja-dashboard/web/app/lib/: catalog.js  detail.js  edits.js  feed.js  i18n.js  pair.js  parallax.js
crates/pamoja-dashboard/web/app/lib/viz/: charts.js  gauges.js  glyphs.js  index.js  links.js  util.js
crates/pamoja-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/pamoja-ffi/include/: pamoja.h
crates/pamoja-ffi/src/: lib.rs  mqtt.rs
crates/pamoja-gpio/: Cargo.toml  README.md
crates/pamoja-gpio/src/: error.rs  i2c.rs  lib.rs  pin.rs  spi.rs
crates/pamoja-kit/: Cargo.toml  README.md
crates/pamoja-kit/src/: anomaly.rs  arm.rs  calibration.rs  chassis.rs  complementary.rs  debounce.rs  depletion.rs  drive.rs  drivers.rs  geo.rs  imu.rs  kalman.rs  lib.rs  median.rs  motion.rs  navigate.rs  odometry.rs  pid.rs  ramp.rs  safety.rs  shape.rs  smoothing.rs  surge.rs  thermostat.rs  trend.rs  units.rs  weather.rs
crates/pamoja-ladder/: README.md
crates/pamoja-ladder/src/: lib.rs
crates/pamoja-loopback/: Cargo.toml  README.md
crates/pamoja-loopback/src/: broker.rs  lib.rs  transport.rs
crates/pamoja-lora/: README.md
crates/pamoja-lora/src/: link.rs
crates/pamoja-lorawan/: Cargo.toml  README.md
crates/pamoja-lorawan/src/: crypto.rs  frame.rs  join.rs  lib.rs  session.rs
crates/pamoja-mesh/: Cargo.toml  README.md
crates/pamoja-mesh/src/: crc.rs  error.rs  frame.rs  lib.rs  seen.rs
crates/pamoja-modbus/: Cargo.toml  README.md
crates/pamoja-modbus/src/: adu.rs  crc.rs  error.rs  function.rs  lib.rs  pdu.rs  response.rs
crates/pamoja-mqtt/: README.md
crates/pamoja-mqtt/src/: lib.rs
crates/pamoja-mqtt/tests/: roundtrip.rs
crates/pamoja-power/: README.md
crates/pamoja-profile/: Cargo.toml  README.md
crates/pamoja-profile/src/: lib.rs  presentation.rs  profile.rs
crates/pamoja-ros2/: Cargo.toml  README.md
crates/pamoja-ros2/src/: bridge.rs  key.rs  lib.rs  msg.rs  name.rs  typehash.rs
crates/pamoja-routing/: Cargo.toml  README.md
crates/pamoja-routing/src/: lib.rs  router.rs
crates/pamoja-security/: Cargo.toml  README.md
crates/pamoja-security/src/: identity.rs  lib.rs  signature.rs
crates/pamoja-sensors/: README.md
crates/pamoja-serial/: README.md
crates/pamoja-session/: README.md
crates/pamoja-sim/: Cargo.toml  README.md
crates/pamoja-sim/src/: lib.rs  robot.rs
crates/pamoja-sync/: Cargo.toml  README.md
crates/pamoja-sync/src/: file.rs  forward.rs  lib.rs  memory.rs
crates/pamoja-telemetry/: Cargo.toml  README.md
crates/pamoja-telemetry/src/: event.rs  lib.rs  reporter.rs
crates/pamoja-zenoh/: Cargo.toml  README.md
crates/pamoja-zenoh/src/: keyexpr.rs  lib.rs
crates/xtask/src/: docs.rs  footprint.rs  main.rs
crates/zero-edge-codec/src/: lib.rs
crates/zero-edge-core/src/: bus.rs  device.rs  error.rs  lib.rs  store.rs  transport.rs
crates/zero-edge-mqtt/: Cargo.toml
crates/zero-edge-mqtt/src/: lib.rs
crates/zero-edge-mqtt/tests/: roundtrip.rs
docs/: README.md
docs/pamoja-dashboard/: state.md
examples/: Cargo.toml  batched_telemetry.rs  conformance.rs  robot_waypoint.rs  signed_audit.rs  signed_telemetry.rs  store_and_forward.rs  telemetry.rs
examples/src/: cold_chain.rs  lib.rs
examples/tests/: conformance.rs
web/: README.md  dev.bat  index.html  serve.mjs  styles.css
web/js/: cardfx.js  config.js  consoles.js  crateversions.js  data.js  geo.js  globe.js  main.js  network.js  scenes.js  ui.js
(+4 files in other folders)
