[workspace]
resolver = "2"
members = [
    "crates/pamoja-core",
    "crates/pamoja-codec",
    "crates/pamoja-mqtt",
    "crates/pamoja-coap",
    "crates/pamoja-ffi",
    "crates/pamoja-sync",
    "crates/pamoja-loopback",
    "crates/pamoja-ladder",
    "crates/pamoja-kit",
    "crates/pamoja-power",
    "crates/pamoja-profile",
    "crates/pamoja-sim",
    "crates/pamoja-security",
    "crates/pamoja-audit",
    "crates/pamoja-telemetry",
    "crates/pamoja-lora",
    "crates/pamoja-modbus",
    "crates/pamoja-mesh",
    "crates/pamoja-lorawan",
    "crates/pamoja-routing",
    "crates/pamoja-bus",
    "crates/xtask",
    "examples",
]
# Language bindings are standalone crates with their own toolchains and lint
# policy; they are built by their own pipelines, not the core workspace.
exclude = ["bindings/node", "bindings/python"]

[workspace.package]
version = "0.1.6"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/tonywied17/pamoja"
authors = ["tonywied17"]

# Internal crate dependencies. The version is required so each crate can be
# published to crates.io, and is kept in lockstep with workspace.package.version.
[workspace.dependencies]
pamoja-core = { path = "crates/pamoja-core", version = "0.1.6" }
pamoja-mqtt = { path = "crates/pamoja-mqtt", version = "0.1.6" }

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
