[package]
name = "pamoja-examples"
description = "Runnable examples composing the pamoja crates."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[example]]
name = "store_and_forward"
path = "store_and_forward.rs"

[[example]]
name = "device_profile"
path = "device_profile.rs"

[[example]]
name = "degraded_link"
path = "degraded_link.rs"

[[example]]
name = "signed_telemetry"
path = "signed_telemetry.rs"

[dependencies]
pamoja-core = { workspace = true }
pamoja-codec = { path = "../crates/pamoja-codec" }
pamoja-sync = { path = "../crates/pamoja-sync" }
pamoja-loopback = { path = "../crates/pamoja-loopback" }
pamoja-power = { path = "../crates/pamoja-power" }
pamoja-profile = { path = "../crates/pamoja-profile" }
pamoja-sim = { path = "../crates/pamoja-sim" }
pamoja-security = { path = "../crates/pamoja-security" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
