[package]
name = "pamoja-python"
version = "0.1.5"
edition = "2021"
# PyO3 sets the real minimum supported Rust version for this binding.
rust-version = "1.74"
license = "MIT"
repository = "https://github.com/tonywied17/pamoja"
authors = ["tonywied17"]
publish = false

[lib]
name = "pamoja_python"
crate-type = ["cdylib", "rlib"]

# Regenerates the committed type stub from the Rust source. Built without
# pyo3/extension-module so it links libpython and can run as a normal binary.
# Kept at src/stub_gen.rs (not src/bin/) so the repo's .NET bin/ ignore rule
# does not exclude it.
[[bin]]
name = "stub_gen"
path = "src/stub_gen.rs"

[features]
default = ["mqtt"]
# The MQTT transport capability. Kept behind a feature so the binding can later
# be split into per-capability packages without reshaping the code.
mqtt = ["dep:pamoja-mqtt", "dep:tokio"]

[dependencies]
# Pinned to 0.28: pyo3-stub-gen 0.22 still uses the pre-0.29 downcast API.
# abi3-py310 (not py39) because pyo3-stub-gen references the 3.10+ stable-ABI
# EncodingWarning type, which a lower abi3 floor would hide.
pyo3 = { version = "0.28", features = ["abi3-py310"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
pyo3-stub-gen = "0.22"
pamoja-core = { path = "../../crates/pamoja-core" }
pamoja-mqtt = { path = "../../crates/pamoja-mqtt", optional = true }
tokio = { version = "1", default-features = false, features = ["sync"], optional = true }
