[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pamoja-core"
version = "0.1.5"
description = "Python bindings for the pamoja device SDK core."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "tonywied17" }]
keywords = ["iot", "robotics", "drones", "mqtt", "embedded"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Communications",
    "Topic :: System :: Hardware",
]

[project.urls]
Repository = "https://github.com/tonywied17/pamoja"

[tool.maturin]
# Mixed Rust/Python layout: the hand-written facade lives under python/, and the
# native contract is built into it as pamoja._core.
python-source = "python"
module-name = "pamoja._core"
features = ["pyo3/extension-module"]
