[package]
name = "pamoja-audit"
description = "Tamper-evident audit logs for pamoja: signed, hash-chained entries so altering, reordering, or dropping a record is detectable."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# This crate is no_std, so it takes the core without its default `std` feature. The
# dependency is declared directly rather than inherited, because `default-features`
# cannot be overridden through workspace inheritance.
pamoja-core = { path = "../pamoja-core", version = "0.1.7", default-features = false }
pamoja-security = { path = "../pamoja-security", version = "0.1.7" }
sha2 = { version = "0.10", default-features = false }

[lints]
workspace = true
