[package]
name = "pamoja-dashboard"
description = "Local-first device dashboard for pamoja: a node serves a hand-built, localized web UI over its own hotspot from a language-neutral state snapshot, fully offline."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# Not yet published: the serving tiers and localization CI are still being built.
publish = false

[features]
# The data contract is always available; the host-side HTTP/SSE server is opt-in (but on
# by default) so the contract can be reused without it, and brings the command
# authenticator (keyed-hash primitives + a system RNG) and asset compression. The `mock`
# feature is the hardware-free demo fleet: on by default for development and the showcase,
# off in a real firmware build that ships only its own real source.
default = ["serve", "mock", "tier-a"]
serve = ["dep:pamoja-session", "dep:getrandom", "dep:flate2"]
mock = []

# Capability tier, chosen at compile time. The full localized app is embedded unless `tier-c`
# is selected, so the documented real build (`--no-default-features --features serve`) keeps
# the full page. `tier-a` and `tier-b` both embed the full bundle today (Tier B's flash-fit
# locale subset is a later refinement); `tier-c` embeds only the minimal floor page for the
# smallest hardware. Build a non-default tier with `--no-default-features`, for example
# `--no-default-features --features "serve,tier-c"`. The per-tier transfer budgets are
# enforced by `cargo xtask dashboard footprint`.
tier-a = []
tier-b = []
tier-c = []

[dependencies]
# Only the data types are read from these crates to build the snapshot; the
# dashboard never drives control itself.
pamoja-telemetry = { path = "../pamoja-telemetry", version = "0.1.10" }
pamoja-profile = { path = "../pamoja-profile", version = "0.1.10" }
pamoja-power = { path = "../pamoja-power", version = "0.1.10" }
# The command authenticator reuses pamoja-session's HKDF/HMAC primitives so control
# actions are gated without a second crypto stack; only used by the serving layer.
pamoja-session = { path = "../pamoja-session", version = "0.1.10", optional = true }
getrandom = { version = "0.2", optional = true }
# Compresses the one-time asset load so the bundle is cheap over a weak hotspot link.
flate2 = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# The dev server and the snapshot generator are the hardware-free demo, so they need the
# mock fleet. The gateway example shows real use and needs only the serving layer.
[[example]]
name = "dev"
required-features = ["serve", "mock"]

[[example]]
name = "snapshot"
required-features = ["mock"]

[[example]]
name = "gateway"
required-features = ["serve"]

[lints]
workspace = true
