[package]
name = "pamoja-kit"
description = "Goal-named helper math for the pamoja device SDK: smoothing, calibration, control, and prediction, no_std-friendly."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true
