[package]
name = "pamoja-ros2"
description = "ROS 2 bridge logic for the pamoja SDK: topic/service name validation and DDS mapping, RIHS01 type-hash and DDS type-name handling, rmw_zenoh key-expression assembly, and CDR message encoding, no_std and allocation-light. The pure-logic half ahead of the live r2r/Zenoh bridge."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
# The live ROS 2 bridge over r2r. Off by default so the spec-logic stays `no_std` and
# normal CI never needs a ROS 2 toolchain; on, it adds the `bridge` module. Building it
# requires a sourced ROS 2 install (r2r generates message bindings at build time), so it
# is built and tested in the ros:jazzy container.
bridge = ["dep:r2r", "dep:tokio", "dep:futures", "dep:pamoja-core", "pamoja-zenoh/runtime"]

[dependencies]
pamoja-zenoh = { workspace = true }
pamoja-core = { workspace = true, optional = true }
r2r = { version = "0.9", optional = true }
tokio = { version = "1", features = ["rt", "sync", "macros", "time"], optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[lints]
workspace = true
