[package]
name = "pamoja-security"
description = "Device identity and signed telemetry for pamoja: ed25519 keys that sign payloads and verify them, for data integrity and audit trails."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
pamoja-core = { workspace = true }
# Signing and verifying are deterministic and need no randomness, so the crate
# stays no_std with only the core ed25519 implementation.
ed25519-dalek = { version = "2", default-features = false }

[lints]
workspace = true
