[package]
name = "pamoja-security"
description = "Device identity and signed telemetry for pamoja: ed25519 keys that sign payloads and verify them, for data integrity and audit trails."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# This crate is no_std, so it takes the core without its default `std` feature. The
# dependency is declared directly rather than inherited, because `default-features`
# cannot be overridden through workspace inheritance.
pamoja-core = { path = "../pamoja-core", version = "0.1.7", default-features = false }
# Signing and verifying are deterministic and need no randomness, so the crate
# stays no_std with only the core ed25519 implementation.
ed25519-dalek = { version = "2", default-features = false }

[lints]
workspace = true
