[package]
name = "pamoja-sim"
description = "Hardware-free device simulators for pamoja: fake sensors with configurable noise and drift, a recording actuator, a lossy-link transport, and a drivable differential-drive robot, behind the core Sensor and Actuator traits."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
pamoja-core = { workspace = true }
pamoja-kit = { workspace = true }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
# The DegradedLink doctest wraps a real in-process transport.
pamoja-loopback = { path = "../pamoja-loopback" }

[lints]
workspace = true
