[package]
name = "pamoja-telemetry"
description = "Device-side observability for pamoja: structured leveled events and counters that degrade gracefully on metered links, no_std and allocation-free."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true
